--- a/talks/talks/2023_12-cs294_tidalsim_final_talk.jinja2
+++ b/talks/talks/2023_12-cs294_tidalsim_final_talk.jinja2
@@ -26,9 +26,9 @@ import 'reveal.js/plugin/highlight/monokai.css'
 {% block slides %}
 <section class="center">
   <h1>TidalSim: Multi-Level Microarchitecture Simulation</h1>
-  <h2>Vighnesh Iyer, Raghav Gupta, Dhruv Vaish, Bora Nikolic, Sophia Shao</h2>
-  <h3>CS294 Project Presentation</h3>
-  <h4>Tuesday, December 12th, 2023</h4>
+  <h3 style="font-weight: 500;">Vighnesh Iyer, Raghav Gupta, Dhruv Vaish, Young-Jin Park, Bora Nikolic, Sophia Shao</h2>
+  <h3 style="font-weight: normal;">CS294 Project Presentation</h3>
+  <h4 style="font-weight: normal;">Tuesday, December 12th, 2023</h4>
 </section>
 
 <section>
@@ -36,12 +36,13 @@ import 'reveal.js/plugin/highlight/monokai.css'
     <h2 class="center">Motivation and Background</h2>
   </section>
 
+  <!--
   <section>
     <h2>Motivation</h2>
 
     <ul>
       <li class="fragment">We want fast design iteration and evaluation of PPA + verification given real workloads
-      <!--Fast design iteration and evaluation of PPA + verification requires stimulus that's representative and comprehensive wrt real workloads (execution fragments)-->
+      Fast design iteration and evaluation of PPA + verification requires stimulus that's representative and comprehensive wrt real workloads (execution fragments)
         <ul>
           <li class="fragment"><em>Performance estimation:</em> Impact of μArch optimizations / HW parameters on real workloads</li>
           <li class="fragment"><em>Power macromodeling:</em> Identification of important netlist nodes in power model + traces for training</li>
@@ -57,15 +58,16 @@ import 'reveal.js/plugin/highlight/monokai.css'
       </li>
     </ul>
   </section>
+  -->
 
   <section>
     <h2>Problem Overview</h2>
 
-    <p class="center fragment">Fast RTL-level μArch simulation and performance metric / interesting trace extraction</p>
+    <p class="center fragment">Fast RTL-level μArch simulation and performance trace estimation</p>
     <p class="center fragment"><em><strong>enables</strong></em></p>
-    <p class="center fragment">Rapid RTL iteration with performance, power modeling, and verification evaluation on real workloads</p>
+    <p class="center fragment">Rapid RTL iteration with performance evaluation on real workloads</p>
     <hr class="fragment">
-    <p class="center fragment">How can we achieve high throughput, high fidelity, low latency μArch simulation with RTL-level interesting trace extraction?</p>
+    <p class="center fragment" style="font-weight: 500;">How can we achieve high throughput, high fidelity, low latency μArch simulation?</p>
   </section>
 
   <section>
@@ -104,7 +106,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
       </tr>
       <tr class="fragment">
         <td><strong>TidalSim</strong></td>
-        <td>10 MIPS</td>
+        <td>10 MIPS <small>(unoptimized)</small></td>
         <td>&lt;1 minute</td>
         <td style="font-size: 90%">&lt;5% error, 10k intervals</td>
       </tr>
@@ -155,12 +157,12 @@ import 'reveal.js/plugin/highlight/monokai.css'
     <ul>
       <li class="fragment"><em>Sampled</em> simulation techniques have been used in μArch simulators for decades
         <ul>
-          <li class="fragment">SimPoint-style sampling (interval clustering, large intervals)</li>
-          <li class="fragment">SMARTs-style sampling (reservoir sampling, small intervals)</li>
+          <li class="fragment">SimPoint-style sampling (interval clustering, large intervals (1-100M))</li>
+          <li class="fragment">SMARTs-style sampling (reservoir sampling, small intervals (100k-1M))</li>
           <li class="fragment">Implemented in gem5, Sniper, ZSim, SST</li>
         </ul>
       </li>
-      <li class="fragment">LiveSim proposed 2-level simulation (ISA → μArch sim) for rapid iteration of μArch parameters
+      <li class="fragment">LiveSim proposed 2-level simulation (ISA → μArch sim) for <strong>rapid iteration</strong> of μArch parameters
         <ul>
           <li>Functional warmup was used for the cache and branch predictor models</li>
         </ul>
@@ -171,11 +173,39 @@ import 'reveal.js/plugin/highlight/monokai.css'
   <section>
     <h2>What's New</h2>
 
+    <p class="fragment center" data-fragment-index="1" style="font-weight: 500;">What makes RTL-level sampled simulation interesting?</p>
+    <div class="r-stack">
+    <div data-fragment-index="5" class="fragment fade-out">
     <ul>
-      <li class="fragment">No prior work on ISA ↔ μArch models ↔ RTL multi-level simulation with functional warmup</li>
-      <li class="fragment">No one has leveraged the special collateral (waveforms + high-fidelity performance metrics) you can only get from RTL simulation</li>
+      <!--RTL simulation produces special collateral that performance simulation does not-->
+      <!--No one has leveraged the special collateral (waveforms + high-fidelity performance metrics) you can only get from RTL simulation</li>-->
+      <!--<li class="fragment">Multi-level simulation with RTL-level injection has never been done before in the literature <small>(especially with functional warmup)</small></li>-->
+      <!--<li class="fragment">No prior work on ISA ↔ μArch models ↔ RTL multi-level simulation with functional warmup</li>-->
       <!--<li class="fragment">No substantial work on binary-agnostic interval embeddings</li>-->
+      <li data-fragment-index="2" class="fragment">No need to perform correlation between perf model and RTL
+        <ul>
+          <li>Error is introduced by sampling, but it can be understood/bounded with statistical methods</li>
+          <li>Additional error comes from modeling RTL constructs (which is often done poorly and can't be bounded)</li>
+        </ul>
+      </li>
+      <li data-fragment-index="3" class="fragment">Possible to derive accurate PPA numbers
+        <ul>
+          <li>Real frequency and area numbers from synthesis</li>
+          <li>Can extrapolate up to full power traces</li>
+        </ul>
+      </li>
+      <li data-fragment-index="4" class="fragment">Leverage special collateral (waveforms) from RTL simulation
+        <ul>
+          <li>Power macromodel construction and training</li>
+          <li>Coverpoint synthesis, bootstrapping RTL fuzzing</li>
+        </ul>
+      </li>
     </ul>
+    </div>
+    <div data-fragment-index="6" class="fragment fade-in">
+      <p class="center" style="font-weight: 500;">Multi-level simulation with RTL-level injection hasn't been done before. So we should try!</p>
+    </div>
+    </div>
   </section>
 </section>
 
@@ -247,6 +277,7 @@ x2 = 0x0000000080028fa0
 
     <ul>
       <li class="fragment">Arch checkpoints are run in parallel in RTL simulation for N instructions</li>
+      <li class="fragment">Injection with <code>force</code>/<code>release</code> via custom test harness</li>
       <li class="fragment">RTL state injection caveats
         <ul>
           <li class="fragment">Not all arch state maps 1:1 with an RTL-level register</li>
@@ -278,14 +309,16 @@ cycles,instret
 
 <section>
   <section class="center">
-    <h2>Early Results</h2>
+    <h2>Results</h2>
   </section>
 
   <section>
     <h2>Clustering on Embench Benchmarks</h2>
-    <img class="fragment" src="./figs/multi-level-sim/aha-mont64_clustering.svg" />
     <ul>
       <li class="fragment">Cluster centroids indicate which basic blocks are traversed most frequently in each cluster</li>
+    </ul>
+    <img class="fragment" src="./figs/multi-level-sim/aha-mont64_clustering.svg" />
+    <ul>
       <li class="fragment">We observe that most clusters capture unique traversal patterns</li>
     </ul>
   </section>
@@ -333,17 +366,20 @@ cycles,instret
   </section>
 
   <section>
-    <h2>Performance Optimizations</h2>
-    <ul>
-      <li class="fragment">Currently two runs of the binary through spike are needed
+    <h2>Dealing with Long-Lived μArch State</h2>
+
+    <div class="container" style="grid-template-columns: 1fr 1fr;">
+    <div>
+    <img src="./figs/dynamic/tidalsim/uarch_models.svg" />
+    </div>
+    <div style="display:grid; align-content: center;">
       <ul>
-        <li>One to get a commit log for basic block extraction, embedding, and clustering</li>
-        <li>One more to dump arch checkpoints for chosen samples</li>
+        <li class="fragment">/r</li>
       </ul>
-      </li>
-      <li class="fragment">We can take regular checkpoints during the first execution to make arch checkpoint collection fast</li>
-    </ul>
+    </div>
+    </div>
   </section>
+
 
   <section>
     <h2>Validation of State Injection</h2>
@@ -388,48 +424,6 @@ cycles,instret
     </ul>
   </section>
 
-  <section>
-    <h2>Issues with HW Fuzzer Evaluations</h2>
-    <ul>
-      <li class="fragment"><em>Last time</em>: discussed deficiencies in existing HW fuzzing evaluations due to bad success/feedback metrics
-      <ul>
-        <li class="fragment">Structural coverage is too easy to hit</li>
-        <li class="fragment">Time to rediscover old bugs is too biased and forces us to use old RTL</li>
-      </ul>
-      </li>
-      <li class="fragment">Bad metrics ⮕ dubious conclusions
-      <ul>
-        <li>We should save &gt;50% of mutated stimuli (vs &lt;1% for SW fuzzers)</li>
-        <li>RTL-level feedback is useless for hitting bugs or improving coverage (vs SW fuzzers making no progress without feedback)</li>
-      </ul>
-      </li>
-    </ul>
-    <p class="center fragment">Can we synthesize metrics that lead to reasonable HW fuzzer evaluations?</p>
-  </section>
-
-  <section>
-    <h2>Coverpoint Synthesis</h2>
-    <ul>
-      <li class="fragment"><em>Specification mining</em> takes waveforms of an RTL design and synthesizes properties involving 2+ signals that are unfalsified on all traces</li>
-      <li class="fragment">Coverpoint synthesis is an alternative take on spec mining where we synthesize μArch properties that we want to see more of</li>
-      <li class="fragment">This technique is far more effective if we have <em>many unique, realistic traces</em>
-        <ul>
-          <li class="fragment">Leverage interval clustering and sampled RTL simulation</li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Bootstrapping Fuzzing</h2>
-    <ul>
-      <li class="fragment">Most HW fuzzers start from reset and run a binary on the SoC to hit some objective</li>
-      <li class="fragment">Interesting objectives are harder to hit from reset vs from the middle of a workload
-      <ul><li>e.g. post-OS boot, in the middle of an application</li></ul>
-      </li>
-      <li class="fragment">Arch and μArch checkpoints from TidalSim guarantee reachability and provides starting points for HW fuzzers</li>
-    </ul>
-  </section>
 </section>
 
 <section>
