--- a/talks/talks/quals/what.jinja2
+++ b/talks/talks/quals/what.jinja2
@@ -1,3 +1,21 @@
 <section class="center">
-  <h2 class="center">What: TidalSim</h2>
+  <h2 class="center">2. What: Our Vision for TidalSim</h2>
+  <p class="center fragment"><strong>What if</strong> we had a tool that could:</p>
+
+  <ul>
+    <li class="fragment">rapid and accurate perf evaluation and microarhitecture profiling enabling DSE and optimization</li>
+    <li class="fragment">automatic benchmark extraction</li>
+    <li class="fragment">RTL-level collateral to leverage for power and verification</li>
+  </ul>
+</section>
+
+<section>
+  <h2>What: TidalSim</h2>
+  <p>How does this tool address the challenges we posed in the Why section?</p>
+  <p>TODO add main diagram</p>
+</section>
+
+<section>
+  <h2>Scope of Thesis</h2>
+  <p>Expected results</p>
 </section>
