--- a/talks/talks/quals/what.jinja2
+++ b/talks/talks/quals/what.jinja2
@@ -19,3 +19,13 @@
   <h2>Scope of Thesis</h2>
   <p>Expected results</p>
 </section>
+
+<section data-visibility="hidden">
+  <h2>Problem Overview</h2>
+
+  <p class="center fragment">Fast RTL-level μArch simulation and performance metric / interesting trace extraction</p>
+  <p class="center fragment"><em><strong>enables</strong></em></p>
+  <p class="center fragment">Rapid RTL iteration with performance, power modeling, and verification evaluation on real workloads</p>
+  <hr class="fragment">
+  <p class="center fragment">How can we achieve high throughput, high fidelity, low latency μArch simulation with RTL-level interesting trace extraction?</p>
+</section>
