--- a/talks/talks/2024_01-quals-tidalsim.jinja2
+++ b/talks/talks/2024_01-quals-tidalsim.jinja2
@@ -41,7 +41,7 @@ import 'reveal.js/plugin/highlight/monokai.css'
   <h2>Talk Outline</h2>
   <ol>
     <li class="fragment"><strong>Why</strong>: What is the problem I'm solving?</li>
-    <li class="fragment"><strong>What</strong>: What is the technique I'm proposing?</li>
+    <li class="fragment"><strong>What</strong>: What is the thing I want to build?</li>
     <li class="fragment"><strong>Prior work</strong> + <strong>what's new</strong> about my proposal?</li>
     <li class="fragment"><strong>How (pt 1)</strong>: A prototype implementation of my proposal</li>
     <li class="fragment"><strong>How (pt 2)</strong>: Addressing faults of and generalizing the prototype
