--- a/talks/themes/remark-ish.scss
+++ b/talks/themes/remark-ish.scss
@@ -72,6 +72,10 @@ $heading4Size: 1.75rem;
   display: grid;
   grid-auto-flow: column;
   column-gap: 1em;
+  > div {
+    display: grid;
+    place-items: center;
+  }
 }
 
 // https://color.adobe.com/last%20summer%20day-color-theme-1001686
