--- a/talks/themes/remark-ish.scss
+++ b/talks/themes/remark-ish.scss
@@ -97,6 +97,10 @@ $red: #983C2D;
     background: color.adjust($red, $lightness: 20%);
 }
 
+.smallish {
+    font-size: 1.4rem;
+}
+
 .small {
     font-size: 1.3rem;
 }
